src/test/ui/structs/struct-fields-shorthand-unresolved.stderr
error[E0425]: cannot find value `y` in this scope
  --> $DIR/struct-fields-shorthand-unresolved.rs:10:9
   |
LL |         y
   |         ^ help: did you mean `x`? (a similarly named local variable)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
